--- a/part1/1.8/Dockerfile
+++ b/part1/1.8/Dockerfile
@@ -2,4 +2,4 @@ FROM ubuntu:20.04
 RUN apt-get update; apt-get -y install curl
 COPY script.sh .
 RUN chmod +x script.sh
-CMD ./script.sh
+ENTRYPOINT [ "./script.sh" ]
